# tensor-example-embedded

./: .gitmodules  CMakeLists.txt  README.md
compute/: CMakeLists.txt
compute/src/compute/: compute.cpp  compute.hpp
scripts/: build.sh
stm32f4/: .cproject  .mxproject  .project  CMakeLists.txt  stm32f4.ioc  stm32f4.xml
stm32f4/Core/Inc/: constants.h
stm32f4/Core/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
